--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -1,5 +1,5 @@
 <div class="page-header">
-  <h1>{{ page.title }} <small>Supporting tagline</small></h1>
+  <h1>{{ page.title }} <small>Insert tagline here</small></h1>
 </div>
 
 <div class="row">
@@ -20,6 +20,9 @@
         <li class="next disabled"><a>Next &rarr;</a>
       {% endif %}
       </ul>
+    </div>
+    <div class="footer">
+      {% include JB/ads %}
     </div>
     <hr>
     {% include JB/comments %}
